--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "keeper-part-3-starting",
+  "name": "using-pre-built-react-components",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@material-ui/core": "4.0.1",
+    "@material-ui/icons": "4.0.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-scripts": "3.2.0"
